styles/site.scss
---
---

@import "bootstrap_custom";
@import "bootstrap";
//@import "bootstrap-grid";

@each $color, $value in $theme-colors {
    @include bg-variant('.bg-light-#{$color}', theme-color-level($color, -10));
}

.nameheader {
    font-family: "Brawler", Georgia, Times, serif;
}

.primary-content h2, .primary-content h3, .primary-content h4, .primary-content h5 {
    font-family: "Brawler", Georgia, Times, serif;
}

h1 a {
    color: $body-color;

    @include hover-focus {
        text-decoration: none;
        color: $body-color;
    }
}

.disclaimer,.copyright {
    color: #aaa;
    font-size: 80%;
    margin: 0px;
}

h2 + div.blog-whowhen {
    color: #aaa;
    font-size: 80%;
    margin-top: -5px;
    margin-bottom: 5px;
}

header nav {
    margin-bottom: 0;
}

header {
    margin-bottom: 1em;
}

.navbar {
    @include media-breakpoint-down(xs) {
        padding-left: .5rem;
        padding-right: .5rem;
    }

    .nav-scroll {
        overflow: hidden;
        height: 2.5rem;

        .navbar-nav {
            padding-bottom: 2rem;
            overflow-x: auto;
            white-space: nowrap;
            -webkit-overflow-scrolling: touch;
            .nav-link {
                padding-right: .5rem;
                padding-left: .5rem;
            }

            .nav-item.subnav-expander .nav-link {
                font-weight: bold;
            }
            .nav-item.subnav-expander .nav-link.collapsed {
                font-weight: normal;
            }

            .nav-item:first-child .nav-link {
                @include media-breakpoint-down(xs) {
                    padding-left: 0;
                }
            }

            .nav-item:last-child .nav-link {
                @include media-breakpoint-down(xs) {
                    padding-right: 0;
                }
            }
        }
    }
}

.bg-dark {
    text-shadow: 0 0 3px rgba(0,0,0,.3);

    .btn {
        text-shadow: none;
    }
}

.btn:hover {
    transform: translate(0px, -1px);
}

.subnav-container {
    margin-left: -1.5em;
    margin-right: -1.5em;

    nav {
        margin-left: 0;
        margin-right: 0;
        padding-top: 0;
        margin-top: -0.5rem;
    }
}

.navbar-light .subnav-header {
    color: $navbar-light-color;

    @include hover-focus {
        color: $navbar-light-hover-color;
    }
}

.navbar-dark .subnav-header {
    color: $navbar-dark-color;

    @include hover-focus {
        color: $navbar-dark-hover-color;
    }
}

.subnav-header {
    @include media-breakpoint-up(md) {
        margin-right: 1rem;
        margin-left: .5rem;
    }

    display: inline-block;
    padding-top: 0.3125rem;
    padding-bottom: 0.3125rem;
    font-size: 1.25rem;
    line-height: inherit;
    white-space: nowrap;

    @include hover-focus {
        text-decoration: none;
    }
}

.navbar.collapse {
    display: none;
}

.navbar.collapse.show {
    display: flex;
}

// Nav Sidebar
// @author: Harrison Chapman
// ---------------------------
.nav-sidebar {
    padding-top: 0px;
    padding-bottom: 10px;
    background-color: #f7f5fa;
    border-radius: 5px;
}

.nav-sidebar > li > a.nav-header, .nav-sidebar > li > a.nav-header:hover, .nav-sidebar > li > a.nav-header:focus {
    color: $headings-color;
    background-color: #f7f5fa;
}

.nav-sidebar > li {
    margin-top: 1em;
}


.nav-sidebar > li > a.nav-header {
    padding-left: 1em;
}

.nav-sidebar .nav > li > a {
    padding-left: 1em;
    padding-top: 3px;
    font-size: 90%;
}

.nav-sidebar a.nav-link.active {
    font-weight: bold;
}

.center {
    text-align: center;
}

body {
    background-color: #eee;
}

img {
    max-width: 100%;
}

div.tabs div.container {
    padding: 0 20px;
    margin-bottom: -1px;
    border-bottom: 1px solid #eee;
}

div.tabs {
}

$outer-container-lrpad: 1.5em;
$outer-container-tbpad: 1em;

nav {
    margin-left: -$outer-container-lrpad;
    margin-right: -$outer-container-lrpad;
    margin-bottom: 1em;
}

ul.nav-primary {
    padding-left: 3px;
    border-color: #eee;
}
div.container {
    @include media-breakpoint-up(md) {
        margin-top: 10px;
        margin-bottom: 10px;
    }
    background-color: #fff;
    padding: $outer-container-tbpad $outer-container-lrpad;
}

.collapse-toggle::after {
    content: " Hide"
}

.collapse-toggle.collapsed::after {
    content: " Show"
}

.homework ol ol {
    list-style-type: lower-alpha;
    padding-left: 1.5rem;
}

.homework ol li {
    padding-left: .5rem
}

.homework ol {
    @include media-breakpoint-down(sm) {
        padding-left: 1rem;
    }
}

.MathJax_Display, .MJXc-display {
    overflow-y: hidden;
    overflow-x: auto;
}

.carousel.slide {
    overflow: hidden;
    border-radius: 0.25rem;
}

.carousel-indicators {
    bottom: 0px;
}

.abstract {
    padding-left: .5rem;
    padding-right: .5rem;
    font-size: 85%;
    color: $gray-800;
    border-left: 0.25rem solid $gray-300;
}

.solution {
    @extend .d-print-block;
    border-left: 0.25rem solid rgb(255, 0, 0);
    border-radius: 0.25rem 0.25rem 0 0;
    background-color: rgb(255, 220, 220);
    padding: 0.5rem;
}

.solution.collapse, .solution.collapsing {
    margin-bottom: 0;
}

.solution::before {
    content: "Solution:";
    font-weight: bold;
}

button.show-solution {
    width: 100%;
    margin-bottom: 1rem;
}

button.show-solution.shown {
    border-top-right-radius: 0;
    border-top-left-radius: 0;
}

